--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -107,8 +107,8 @@
 
         <label><input type="checkbox" id="applyDiscount" />Uplatniť zľavu</label><br />
         <div id="discount-wrapper" style="display: none;">
-          <label for="discount">Zľavový kód:</label>
-          <input type="text" id="discount" name="discount" />
+          <label for="discount_code">Zľavový kód:</label>
+          <input type="text" id="discount_code" name="discount_code" />
         </div><br />
 
         <input type="checkbox" id="suhlas" required />
