--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -105,7 +105,7 @@
         <input type="hidden" id="month" name="month" />
         <input type="hidden" id="day" name="day" />
         <input type="hidden" id="hour" name="hour" />
-        <input type="submit" value="Zaplatiť" class="re-button" />
+        <input type="submit" value="Objednať a Zaplatiť" class="re-button" />
       </form>
     </div>
 
