--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -107,6 +107,7 @@
         <input type="hidden" id="hour" name="hour" />
         <input type="submit" value="Objednať a Zaplatiť" class="re-button" />
       </form>
+      <div id="errors" style="color:red;"></div>
     </div>
 
     <a class="to-top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
