Errors on android

--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -106,8 +106,8 @@
         <input type="hidden" id="day" name="day" />
         <input type="hidden" id="hour" name="hour" />
         <input type="submit" value="Objednať a Zaplatiť" class="re-button" />
+        <div id="errors"</div>
       </form>
-      <div id="errors" style="color:red;"></div>
     </div>
 
     <a class="to-top" href="#"><i class="fa-solid fa-arrow-up"></i></a>
