--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -99,14 +99,14 @@
           <input type="text" id="discount_code" name="discount_code" />
         </div><br />
 
-        <input type="checkbox" id="suhlas" required/>
+        <input type="checkbox" id="suhlas"/>
         <label for="suhlas">Súhlasím s <a href="v2-podmienky.pdf" target="_blank" class="inline-link">podmienkami</a> využívania poľnej sauny</label><br />
         <input type="hidden" id="year" name="year" />
         <input type="hidden" id="month" name="month" />
         <input type="hidden" id="day" name="day" />
         <input type="hidden" id="hour" name="hour" />
+        <div id="form_errors"</div>
         <input type="submit" value="Objednať a Zaplatiť" class="re-button" />
-        <div id="errors"</div>
       </form>
     </div>
 
