--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -77,7 +77,7 @@
     <div class="reservation-wrap">
       <div id="calendar"></div>
 
-      <form id="reservation">
+      <form id="payment-form">
         <div style="margin-bottom: 10px">
           <label for="term">Termín:</label> <span id="term"></span><br />
           <label for="price">Cena:</label> <span id="price"></span><br />
