--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self'; 
+        script-src 'self' 'unsafe-inline' 'unsafe-eval'
+        https://*.gopay.cz
+        https://*.gopay.com
+        https://*.gopaycdn.com
+        https://*.gopaycdn-test.com
+        https://*.visa.com
+        https://*.mastercard.com
+        https://*.google-analytics.com
+        https://stats.g.doubleclick.net
+        https://*.google.com
+        https://google.com
+        https://*.googleapis.com; 
+        img-src 'self'
+        data: https://*.gopay.com https://*.gopaycdn.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com;
+        img-src 'self' data: https://*.gopay.com https://*.gopaycdn.com;
+    ">
     <title>POĽNÁ SAUNA</title>
     <link rel="icon" href="/img/icons8-log-cabin-16.png" />
     <link rel="stylesheet" href="v2-calendar.css" type="text/css" media="all" />
