--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -4,26 +4,74 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Security-Policy" content="
-        default-src 'self'; 
-        script-src 'self' 'unsafe-inline' 'unsafe-eval'
-        https://*.gopay.cz
-        https://*.gopay.com
-        https://*.gopaycdn.com
-        https://*.gopaycdn-test.com
-        https://*.visa.com
-        https://*.mastercard.com
-        https://*.google-analytics.com
-        https://stats.g.doubleclick.net
-        https://*.google.com
-        https://google.com
-        https://*.googleapis.com; 
-        img-src 'self'
-        data: https://*.gopay.com https://*.gopaycdn.com;
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-        font-src 'self' https://fonts.gstatic.com;
-        img-src 'self' data: https://*.gopay.com https://*.gopaycdn.com;
-    ">
+<!-- <meta http-equiv="Content-Security-Policy" content=" -->
+<!--   default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; -->
+<!--   script-src * 'unsafe-inline' 'unsafe-eval' data: blob:; -->
+<!--   style-src * 'unsafe-inline' data: blob:; -->
+<!--   img-src * data: blob:; -->
+<!--   font-src * data: blob:; -->
+<!--   connect-src *; -->
+<!--   frame-src *; -->
+<!--   media-src *; -->
+<!-- "> -->
+
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src 'self' 'unsafe-inline' 'unsafe-eval'
+    https://*.gopay.cz
+    https://*.gopay.com
+    https://*.gopaycdn.com
+    https://*.gopaycdn-test.com
+    https://*.visa.com
+    https://*.mastercard.com
+    https://cdnjs.cloudflare.com
+    https://kit.fontawesome.com
+    https://cdn.getbeyond.io;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://ka-f.fontawesome.com;
+  font-src 'self' https://fonts.gstatic.com https://ka-f.fontawesome.com;
+  img-src 'self' data: https://*.gopay.com https://*.gopaycdn.com;
+  connect-src 'self' https://*.gopay.cz https://*.gopay.com https://*.gopaycdn.com https://*.gopaycdn-test.com  https://ka-f.fontawesome.com https://booking.polnasauna.sk;
+  frame-src 'self' https://*.gopay.cz https://*.gopay.com https://*.gopaycdn.com https://*.gopaycdn-test.com;
+">
+    <!-- <meta http-equiv="Content-Security-Policy" content=" -->
+    <!--     default-src 'self' -->
+    <!--     https://booking.polnasauna.sk;  -->
+    <!---->
+    <!--     script-src 'self' 'unsafe-inline' 'unsafe-eval' -->
+    <!--     https://*.google-analytics.com -->
+    <!--     https://*.google.com -->
+    <!--     https://*.google.cz -->
+    <!--     https://*.googleapis.com -->
+    <!--     https://*.gopay.com -->
+    <!--     https://*.gopay.cz -->
+    <!--     https://*.gopaycdn-test.com -->
+    <!--     https://*.gopaycdn.com -->
+    <!--     https://*.mastercard.com -->
+    <!--     https://*.visa.com -->
+    <!--     https://google.com -->
+    <!--     https://stats.g.doubleclick.net -->
+    <!--     https://cdn.getbeyond.io -->
+    <!--     https://goshop.com -->
+    <!--     https://gp-gopay.atlassian.net -->
+    <!--     https://gw.sandbox.gopay.com -->
+    <!---->
+    <!--     https://cdnjs.cloudflare.com -->
+    <!--     https://kit.fontawesome.com; -->
+    <!---->
+    <!--     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; -->
+    <!--     font-src 'self' https://fonts.gstatic.com https://ka-f.fontawesome.com; -->
+    <!--     connect-src 'self' https://ka-f.fontawesome.com https://booking.polnasauna.sk; -->
+    <!--     img-src 'self' data: https://*.gopay.com https://*.gopaycdn.com; -->
+    <!---->
+    <!-- "> -->
+        <!-- img-src 'self' data: *.gopay.cz *.gopay.com goshop.com *.google-analytics.com stats.g.doubleclick.net *.google.com google.com *.google.cz *.googleapis.com https://partner.dev.gopay.cz p.typekit.net *.gstatic.com *.visa.com *.mastercard.com *.gopaycdn.com *.gopaycdn-test.com; -->
+        <!-- font-src 'self' data: use.typekit.net; -->
+        <!-- frame-src *; -->
+        <!-- style-src 'self' 'unsafe-inline' use.typekit.net p.typekit.net; -->
+        <!-- script-src 'self' 'unsafe-inline' 'unsafe-eval' *.gopay.cz *.gopay.com goshop.com *.google-analytics.com stats.g.doubleclick…leapis.com cdn.getbeyond.io *.visa.com *.mastercard.com *.gopaycdn.com *.gopaycdn-test.com; -->
+        <!-- connect-src 'self' *.gopay.cz *.gopay.com goshop.com *.google-analytics.com stats.g.doubleclick.net *.google.com google.com *.google.cz *.googleapis.com *.visa.com *.mastercard.com *.gopaycdn.com *.gopaycdn-test.com; -->
+        <!-- default-src 'self' *.gopay.cz *.gopay.com goshop.com data: *.google-analytics.com stats.g.doubleclick.net *.google.com google.com *.google.cz *.googleapis.com *.visa.com *.mastercard.com; -->
+        <!-- frame-ancestors *; -->
     <title>POĽNÁ SAUNA</title>
     <link rel="icon" href="/img/icons8-log-cabin-16.png" />
     <link rel="stylesheet" href="v2-calendar.css" type="text/css" media="all" />
@@ -97,7 +145,7 @@
     <div class="reservation-wrap">
       <div id="calendar"></div>
 
-      <form id="payment-form">
+      <form method="post" id="payment-form">
         <div style="margin-bottom: 10px">
           <label for="term">Termín:</label> <span id="term"></span><br />
           <label for="price">Cena:</label> <span id="price"></span><br />
