--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<!-- <meta http-equiv="Content-Security-Policy" content=" -->
-<!--   default-src * 'unsafe-inline' 'unsafe-eval' data: blob:; -->
-<!--   script-src * 'unsafe-inline' 'unsafe-eval' data: blob:; -->
-<!--   style-src * 'unsafe-inline' data: blob:; -->
-<!--   img-src * data: blob:; -->
-<!--   font-src * data: blob:; -->
-<!--   connect-src *; -->
-<!--   frame-src *; -->
-<!--   media-src *; -->
-<!-- "> -->
-
 <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  script-src 'self' 'unsafe-inline' 'unsafe-eval'
-    https://*.gopay.cz
-    https://*.gopay.com
-    https://*.gopaycdn.com
-    https://*.gopaycdn-test.com
-    https://*.visa.com
-    https://*.mastercard.com
-    https://cdnjs.cloudflare.com
-    https://kit.fontawesome.com
-    https://cdn.getbeyond.io;
-  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://ka-f.fontawesome.com;
-  font-src 'self' https://fonts.gstatic.com https://ka-f.fontawesome.com;
-  img-src 'self' data: https://*.gopay.com https://*.gopaycdn.com;
-  connect-src 'self' https://*.gopay.cz https://*.gopay.com https://*.gopaycdn.com https://*.gopaycdn-test.com  https://ka-f.fontawesome.com https://booking.polnasauna.sk;
-  frame-src 'self' https://*.gopay.cz https://*.gopay.com https://*.gopaycdn.com https://*.gopaycdn-test.com;
+  default-src * 'unsafe-inline' 'unsafe-eval' data: blob:;
+  script-src * 'unsafe-inline' 'unsafe-eval' data: blob:;
+  style-src * 'unsafe-inline' data: blob:;
+  img-src * data: blob:;
+  font-src * data: blob:;
+  connect-src *;
+  frame-src *;
+  media-src *;
 ">
+
+<!-- <meta http-equiv="Content-Security-Policy" content=" -->
+<!--   default-src 'self'; -->
+<!--   script-src 'self' 'unsafe-inline' 'unsafe-eval' -->
+<!--     https://*.gopay.cz -->
+<!--     https://*.gopay.com -->
+<!--     https://*.gopaycdn.com -->
+<!--     https://*.gopaycdn-test.com -->
+<!--     https://*.visa.com -->
+<!--     https://*.mastercard.com -->
+<!--     https://cdnjs.cloudflare.com -->
+<!--     https://kit.fontawesome.com -->
+<!--     https://cdn.getbeyond.io; -->
+<!--   style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://ka-f.fontawesome.com; -->
+<!--   font-src 'self' https://fonts.gstatic.com https://ka-f.fontawesome.com; -->
+<!--   img-src 'self' data: https://*.gopay.com https://*.gopaycdn.com; -->
+<!--   connect-src 'self' https://*.gopay.cz https://*.gopay.com https://*.gopaycdn.com https://*.gopaycdn-test.com  https://ka-f.fontawesome.com https://booking.polnasauna.sk; -->
+<!--   frame-src 'self' https://*.gopay.cz https://*.gopay.com https://*.gopaycdn.com https://*.gopaycdn-test.com; -->
+<!-- "> -->
     <!-- <meta http-equiv="Content-Security-Policy" content=" -->
     <!--     default-src 'self' -->
     <!--     https://booking.polnasauna.sk;  -->
@@ -82,10 +82,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" />
+    <script src="https://gw.sandbox.gopay.com/gp-gw/js/embed.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/locale/sk.min.js"></script>
     <script src="https://kit.fontawesome.com/13dba11563.js" crossorigin="anonymous" ></script>
-    <script src="https://gw.sandbox.gopay.com/gp-gw/js/embed.js"></script>
     <!-- <script src="https://gate.gopay.cz/gp-gw/js/embed.js"></script> -->
   </head>
   <body>
