--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -82,11 +82,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" />
-    <script src="https://gw.sandbox.gopay.com/gp-gw/js/embed.js"></script>
+    <script src="https://gw.sandbox.gopay.com/gp-gw/js/embed.js" defer></script>
+    <!-- <script src="https://gate.gopay.cz/gp-gw/js/embed.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.3/locale/sk.min.js"></script>
     <script src="https://kit.fontawesome.com/13dba11563.js" crossorigin="anonymous" ></script>
-    <!-- <script src="https://gate.gopay.cz/gp-gw/js/embed.js"></script> -->
   </head>
   <body>
     <!-- mobile menu -->
