--- a/return.html
+++ b/return.html
@@ -58,16 +58,10 @@
             </li>
           </ul>
         </nav>
-        <!-- <div id="showcase">
-          <div class="showcase-content">
-            <div id="message" class="text-secondary"></div>
-          </div>
-        </div> -->
       </div>
     </header>
     <div class="heading-success">
-      <!-- <h1 id="message" class="text-secondary"></h1> -->
-      <h1 id="message" class="text-secondary">Rezervácia úspešná</h1>
+      <h1 id="message" class="text-secondary"></h1>
     </div>
 
     <footer id="footer">
