--- a/v2-reservation.html
+++ b/v2-reservation.html
@@ -93,7 +93,8 @@
         <label for="phone">Tel. číslo:</label>
         <input type="tel" id="phone" name="phone" /><br />
 
-        <label><input type="checkbox" id="applyDiscount" />Uplatniť zľavu</label><br />
+        <input type="checkbox" id="applyDiscount" />
+        <label for="applyDiscount">Uplatniť zľavu</label><br />
         <div id="discount-wrapper" style="display: none;">
           <label for="discount_code">Zľavový kód:</label>
           <input type="text" id="discount_code" name="discount_code" />
