--- a/return.html
+++ b/return.html
@@ -8,7 +8,6 @@
     <link rel="icon" href="/img/icons8-log-cabin-16.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="menu.css" />
-    <link href="calendar.css" rel="stylesheet" type="text/css" media="all" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" />
@@ -62,6 +61,10 @@
     </header>
     <div class="heading-success">
       <h1 id="message" class="text-secondary"></h1>
+      <div id="action-buttons">
+        <a id="btn-repeat" class="btn" href="#">Opakovať platbu</a>
+        <a id="btn-cancel" class="btn" href="#">Zrušiť rezerváciu</a>
+      </div>
     </div>
 
     <footer id="footer">
