--- a/cancel.html
+++ b/cancel.html
@@ -71,8 +71,7 @@
     <footer id="footer">
       <p class="copy">Copyright © 2026 - Poľná sauna Nová Ľubovňa</p>
     </footer>
-    <!-- Cancel confirmation modal -->
-    <div id="cancelModal" class="modal">
+    <div id="cancelModal" class="modal hidden">
       <div class="modal-content">
         <h2>Poľná sauna</h2>
         <p>Naozaj chcete zrušiť vašu rezerváciu?</p>
